# air_alert

./: .gitignore  Cargo.toml  README.md  build.rs  config.json
samples/: air_alert.service
src/: configer.rs  logger.rs  main.rs  observer.rs
src/observer/: air_alert_requester.rs  audioer.rs
